--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,5 +29,5 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: ${{ secrets.FTP_PORT }}
-          server-dir: catalyshpere.xserv.jp/public_html/app-demo001.catalysphere.com
+          server-dir: catalyshpere.xserv.jp/public_html/app-demo001.catalysphere.com/
           local-dir: ./out/
