edit: change server-dir

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -30,4 +30,4 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftps
           port: ${{ secrets.FTP_PORT }}
-          server-dir: catalyshpere.xserv.jp/public_html/app-demo001.catalysphere.com/
+          server-dir: catalyshpere.com/public_html/app-demo001.catalysphere.com/public_html/
