edit: server name

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,14 +27,13 @@ jobs:
         run: echo "$SSH_PRIVATE_KEY" > key && chmod 600 key
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          FTP_SERVER: ${{ secrets.FTP_SERVER }}
       - name: Deploy with rsync
         run: |
           rsync -auzrv \
           -e "ssh -i key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p 10022" \
           --delete \
           ./.next/* \
-          catalysphere@${{secrets.FTP_SERVER}}:/home/catalysphere/catalysphere.com/public_html/app-demo001/ \
+          catalysphere@sv14319.xserver.jp:/home/catalysphere/catalysphere.com/public_html/app-demo001/ \
           --exclude .htaccess
 
         #FTP Deploy
