--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -31,10 +31,15 @@ jobs:
       - name: Set permission for SSH Key
         run: chmod 600 catalysphere.key
 
+      - name: Add SSH key to the ssh-agent
+        uses: |
+          eval $(ssh-agent -s)
+          ssh-add catalysphere.key << "${{ secrets.SSH_PASSWARD }}"
+
       - name: Deploy with rsync
         run: |
           rsync -auzrv \
-          -e "ssh -i key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p 10022" \
+          -e "ssh -i catalyshpere.key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p 10022" \
           --delete \
           ./.next/* \
           catalysphere@sv14319.xserver.jp:/home/catalysphere/catalysphere.com/public_html/app-demo001/ \
