--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Add SSH key to the ssh-agent
         uses: |
           eval $(ssh-agent -s)
-          ssh-add catalysphere.key << "${{ secrets.SSH_PASSWARD }}"
+          ssh-add catalysphere.key << ${{ secrets.SSH_PASSWORD }}
 
       - name: Deploy with rsync
         run: |
