--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,7 +32,7 @@ jobs:
         run: chmod 600 catalysphere.key
 
       - name: Add SSH key to the ssh-agent
-        uses: |
+        run: |
           eval $(ssh-agent -s)
           ssh-add catalysphere.key << ${{ secrets.SSH_PASSWORD }}
 
