--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -31,10 +31,10 @@ jobs:
       - name: Set permission for SSH Key
         run: chmod 600 catalysphere.key
 
-      - name: Add SSH key to the ssh-agent
-        run: |
-          eval $(ssh-agent -s)
-          echo ${{ secrets.SSH_PASSWORD }} | ssh-add catalysphere.key
+#      - name: Add SSH key to the ssh-agent
+ #       run: |
+  #        eval $(ssh-agent -s)
+   #       echo ${{ secrets.SSH_PASSWORD }} | ssh-add catalysphere.key
 
       - name: Deploy with rsync
         run: |
