--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build
         run: npm run build
 
-        #SSH Deploy
+      # SSH Deploy
       - name: Generate SSH key
         run: echo "$SSH_PRIVATE_KEY" > catalysphere.key
         env:
@@ -31,19 +31,20 @@ jobs:
       - name: Set permission for SSH Key
         run: chmod 600 catalysphere.key
 
-#      - name: Add SSH key to the ssh-agent
- #       run: |
-  #        eval $(ssh-agent -s)
-   #       echo ${{ secrets.SSH_PASSWORD }} | ssh-add catalysphere.key
+      - name: Add SSH key to the ssh-agent
+        run: |
+          eval $(ssh-agent -s)
+          echo ${{ secrets.SSH_PASSWORD }} | ssh-add catalysphere.key
 
       - name: Deploy with rsync
         run: |
           rsync -auzrv \
-          -e "ssh -i catalyshpere.key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p 10022" \
+          -e "ssh -i catalysphere.key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p 10022" \
           --delete \
           ./.next/* \
           catalysphere@sv14319.xserver.jp:/home/catalysphere/catalysphere.com/public_html/app-demo001/ \
           --exclude .htaccess
+
 
         #FTP Deploy
       #- name: FTP Deploy
