--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -36,6 +36,13 @@ jobs:
           eval $(ssh-agent -s)
           ssh-add catalysphere.key
 
+      - name: Add SSH key to the ssh-agent
+        run: |
+          eval $(ssh-agent -s)
+          echo "${{ secrets.SSH_PASSWORD }}" | ssh-add catalysphere.key
+        env:
+          SSH_PASSPHRASE: ${{ secrets.SSH_PASSWORD }}
+
       - name: Deploy with rsync
         run: |
           rsync -auzrv \
