--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -34,14 +34,9 @@ jobs:
       - name: Add SSH key to the ssh-agent
         run: |
           eval $(ssh-agent -s)
-          ssh-add catalysphere.key
-
-      - name: Add SSH key to the ssh-agent
-        run: |
-          eval $(ssh-agent -s)
           echo "${{ secrets.SSH_PASSWORD }}" | ssh-add catalysphere.key
         env:
-          SSH_PASSPHRASE: ${{ secrets.SSH_PASSWORD }}
+          SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
 
       - name: Deploy with rsync
         run: |
@@ -51,6 +46,7 @@ jobs:
           ./.next/* \
           catalysphere@sv14319.xserver.jp:/home/catalysphere/catalysphere.com/public_html/app-demo001/ \
           --exclude .htaccess
+
 
 
 
