--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,9 +28,15 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
+      - name: Check file permissions of SSH key
+        run: ls -l catalysphere.key
+
       - name: Set permission for SSH Key
         run: chmod 600 catalysphere.key
 
+      - name: Check file permissions of SSH key
+        run: ls -l catalysphere.key
+      
       - name: Add SSH key to the ssh-agent
         run: |
           eval $(ssh-agent -s)
