--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Add SSH key to the ssh-agent
         run: |
           eval $(ssh-agent -s)
-          echo "${{ secrets.SSH_PASSWORD }}" | ssh-add catalysphere.key
+          echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add catalysphere.key
         env:
-          SSH_PASSWORD: ${{ secrets.SSH_PASSWORD }}
+          SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
 
       - name: Deploy with rsync
         run: rsync -auvz -e "ssh -i catalysphere.key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p 10022" --delete ./.next/* catalysphere@sv14319.xserver.jp:/home/catalysphere/catalysphere.com/public_html/app-demo001/ --exclude .htaccess
