--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -38,5 +38,8 @@ jobs:
         env:
           SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
 
+      - name: Test SSH connection
+        run: ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i catalysphere.key -p 10022 catalysphere@sv14319.xserver.jp echo "SSH connection successful"
+
       - name: Deploy with rsync
-        run: rsync -auvz -e "ssh -i catalysphere.key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p 10022 -vvv" --delete ./.next/* catalysphere@sv14319.xserver.jp:/home/catalysphere/catalysphere.com/public_html/app-demo001 --exclude .htaccess
+        run: rsync -auvz -e "ssh -i catalysphere.key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p 10022 -vvv" --delete ./.next/* catalysphere@sv14319.xserver.jp:/home/catalysphere/catalysphere.com/public_html/app-demo001/ --exclude .htaccess
