--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -30,6 +30,14 @@ jobs:
       
       - name: Set permission for SSH Key
         run: chmod 600 catalysphere.key
+
+      - name: Show current working directory
+        run: pwd
+
+      - name: Check part of SSH_PRIVATE_KEY
+        run: echo "First 10 characters of SSH_PRIVATE_KEY are ${SSH_PRIVATE_KEY:0:10}"
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       
       - name: Add SSH key to the ssh-agent
         run: |
@@ -39,7 +47,7 @@ jobs:
           SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
 
       - name: Test SSH connection
-        run: ssh -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -i catalysphere.key -p 10022 catalysphere@sv14319.xserver.jp echo "SSH connection successful"
+        run: ssh -i catalysphere.key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p 10022 catalysphere@sv14319.xserver.jp echo "SSH connection successful"
 
       - name: Deploy with rsync
         run: rsync -auvz -e "ssh -i catalysphere.key -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no -p 10022 -vvv" --delete ./.next/* catalysphere@sv14319.xserver.jp:/home/catalysphere/catalysphere.com/public_html/app-demo001/ --exclude .htaccess
