--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Add SSH key to the ssh-agent
         run: |
           eval $(ssh-agent -s)
-          echo "${{ secrets.SSH_PASSPHRASE }}" | ssh-add catalysphere.key
+          echo ${{ secrets.SSH_PASSPHRASE }} | ssh-add catalysphere.key
         env:
           SSH_PASSPHRASE: ${{ secrets.SSH_PASSPHRASE }}
 
